--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
     <h2>Contact Me</h2>
 
     <div class="social-icons">
-        <a href="https://linkedin.com/in/your-linkedin" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/malika-farah-723077332/" target="_blank" aria-label="LinkedIn">
             <i class="fa-brands fa-linkedin"></i>
         </a>
 
-        <a href="https://github.com/your-github" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/malikafarah" target="_blank" aria-label="GitHub">
             <i class="fa-brands fa-github"></i>
         </a>
 
-        <a href="https://instagram.com/your-instagram" target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/malika._.farah/" target="_blank" aria-label="Instagram">
             <i class="fa-brands fa-instagram"></i>
         </a>
 
